--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - py.test --flake8
+  - python -m pytest --flake8
 
 notifications:
   email:
